feat: implemented backup API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=website
+
+spring.datasource.url=jdbc:sqlite:website.sqlite
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
