--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.hibernate.orm:hibernate-community-dialects'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.xerial:sqlite-jdbc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
