refactor: switched to SpringDoc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.default-produces-media-type=application/json
+springdoc.swagger-ui.path=/swagger-ui.html
