feat: created custom error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.application.name=website
 
 spring.datasource.url=jdbc:sqlite:website.sqlite
@@ -6,6 +8,8 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mustache.suffix=.mustache.html
 
 springdoc.default-produces-media-type=application/json
 springdoc.swagger-ui.path=/swagger-ui.html
