feat: secured by user accounts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.application.name=website
 
-spring.datasource.url=jdbc:sqlite:website.sqlite
+spring.datasource.url=jdbc:sqlite:data.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.jpa.show-sql=false
@@ -13,3 +13,5 @@ spring.mustache.suffix=.mustache.html
 
 springdoc.default-produces-media-type=application/json
 springdoc.swagger-ui.path=/swagger-ui.html
+
+website.users-json-file=users.json
