--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,17 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.21'
     implementation 'org.hibernate.orm:hibernate-community-dialects'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.xerial:sqlite-jdbc'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
