--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+website.users-json-file=
