--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mustache.suffix=.mustache.html
+spring.mustache.servlet.content-type=text/html; charset=utf-8
 
 springdoc.default-produces-media-type=application/json
 springdoc.swagger-ui.path=/swagger-ui.html
