refactor: `users.json` replaced by `config.json`

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.mustache.servlet.content-type=text/html; charset=utf-8
 springdoc.default-produces-media-type=application/json
 springdoc.swagger-ui.path=/swagger-ui.html
 
-website.users-json-file=users.json
+website.config-json-file=config.json
