--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-website.users-json-file=
+website.config-json-file=config.json
